# salesforce-report-agent

./: .env.example  .gitignore  README.md  pyproject.toml
config/: business_semantics.yaml  field_mapping.example.json  field_mapping.json
src/sf_report_agent/: __init__.py  config.py  logging_config.py  main.py
src/sf_report_agent/callbacks/: __init__.py  sqlite_update.py
src/sf_report_agent/db/: __init__.py  migrations.sql  run_repository.py  task_reader.py
src/sf_report_agent/graph/: __init__.py  app.py  nodes.py  state.py
src/sf_report_agent/llm/: __init__.py  ollama_client.py  prompts.py
src/sf_report_agent/models/: __init__.py  execution_result.py  permissions.py  report_plan.py  report_request.py  task.py
src/sf_report_agent/reports/: __init__.py  exporters.py  quality_checks.py  transforms.py
src/sf_report_agent/salesforce/: __init__.py  business_planner.py  business_semantics.py  client.py  field_mapper.py  ids.py  label_resolver.py  oauth.py  permissions_doctor.py  schema.py  sf_cli.py  soql_builder.py  validators.py
tests/: conftest.py  test_business_semantics.py  test_campaign_id_extraction.py  test_graph_micaela_report.py  test_inspect_schema.py  test_label_resolver.py  test_oauth.py  test_parse_salesforce_request.py  test_permissions_doctor.py  test_plan_bundle.py  test_responses.py  test_run_pending.py  test_run_repository.py  test_sf_cli.py  test_soql_builder.py
tests/fixtures/: micaela_salesforce_task.json  sample_slack_agent.db  sample_slack_agent.sql
