[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "salesforce-report-agent"
version = "0.1.0"
description = "Worker local read-only para generar reportes de Salesforce desde tareas SQLite"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "langgraph>=0.2,<2",
  "pydantic>=2.8,<3",
  "simple-salesforce>=1.12.6,<2",
  "pandas>=2.2,<3",
  "openpyxl>=3.1,<4",
  "python-dotenv>=1.0,<2",
  "PyYAML>=6.0,<7",
  "rich>=13.7,<15",
  "requests>=2.32,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.6,<1",
  "mypy>=1.11,<2",
  "pandas-stubs>=2.2",
  "types-openpyxl>=3.1",
  "types-requests>=2.32",
  "types-PyYAML>=6.0",
]

[project.scripts]
sf-report-agent = "sf_report_agent.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sf_report_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
packages = ["sf_report_agent"]
strict = true
warn_unused_ignores = true
